--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.servlet.multipart.max-file-size=10MB
 #\u963F\u91CC\u4E91 OSS
 #\u4E0D\u540C\u7684\u670D\u52A1\u5668\uFF0C\u5730\u5740\u4E0D\u540C  oss-cn-guangzhou
 aliyun.oss.file.endpoint=oss-cn-guangzhou.aliyuncs.com
-aliyun.oss.file.keyid=LTAI5tPJxSUb6tWRtZxFiedN
-aliyun.oss.file.keysecret=ex3sDQSsVTJph5MwmST5rMD9v6FURT
+aliyun.oss.file.keyid=yourkeyid
+aliyun.oss.file.keysecret=yourkeysecret
 #bucket\u53EF\u4EE5\u5728\u63A7\u5236\u53F0\u521B\u5EFA\uFF0C\u4E5F\u53EF\u4EE5\u4F7F\u7528java\u4EE3\u7801\u521B\u5EFA
 aliyun.oss.file.bucketname=edu-guli-wen
 aliyun.oss.file.filehost=avatar
